--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <div class="main-menu">
     <div class="menu-links">
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="index.html#clients">Clients</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Clients</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </div>
 </div>
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col">
             <div class="logo-holder">
-                <a href="index.html"><img class="logo" src="images/logo.svg" alt="CRE8"></a>
+                <a href="#"><img class="logo" src="images/logo.svg" alt="CRE8"></a>
             </div>
             <div class="social-media">
                 <div class="social-link-holder"><a href="#"><i class="fab fa-twitter"></i></a></div>
@@ -65,7 +65,7 @@
             <div class="sm-text">Design is our lemon juice</div>
             <div class="md-text">we’re creatives that have enthusiasm towards helping corporations, to enhance their brand and to reach their potential clients</div>
             <div class="link-holder">
-                <a class="btn-link" href="about.html">More about us</a>
+                <a class="btn-link" href="#">More about us</a>
             </div>
         </div>
     </div>
@@ -135,7 +135,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4">
-            <a href="project.html">
+            <a href="#">
                 <div class="product-box">
                     <div class="img"><img src="images/img1.png" alt=""></div>
                     <div class="title-holder">
@@ -146,7 +146,7 @@
             </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <a href="project.html">
+            <a href="#">
                 <div class="product-box">
                     <div class="img"><img src="images/img2.png" alt=""></div>
                     <div class="title-holder">
@@ -157,7 +157,7 @@
             </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <a href="project.html">
+            <a href="#">
                 <div class="product-box">
                     <div class="img"><img src="images/img3.png" alt=""></div>
                     <div class="title-holder">
@@ -168,7 +168,7 @@
             </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <a href="project.html">
+            <a href="#">
                 <div class="product-box">
                     <div class="img"><img src="images/img4.png" alt=""></div>
                     <div class="title-holder">
@@ -179,7 +179,7 @@
             </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <a href="project.html">
+            <a href="#">
                 <div class="product-box">
                     <div class="img"><img src="images/img5.png" alt=""></div>
                     <div class="title-holder">
@@ -190,7 +190,7 @@
             </a>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
-            <a href="project.html">
+            <a href="#">
                 <div class="product-box">
                     <div class="img"><img src="images/img6.png" alt=""></div>
                     <div class="title-holder">
@@ -204,7 +204,7 @@
     <div class="row">
         <div class="col">
             <div class="link-holder">
-                <a class="btn-link" href="projects.html">More projects</a>
+                <a class="btn-link" href="#">More projects</a>
             </div>
         </div>
     </div>
@@ -322,6 +322,7 @@
         </div>
     </div>
 </footer>
+<script data-cfasync="false" src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/anime.min.js"></script>
